Added font weight and style resources created font weight variables in stylesheet and added a resource to README.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
 
     --ff-body: var(--ff-primary);
     --ff-heading: var(--ff-primary);
+
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 700;
 }
 
 /* Box sizing rules */
